--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,15 @@
-django
-factory_boy
-djangorestframework
-django-environ
+asgiref==3.8.1
+Django==5.1.3
+django-environ==0.12.0
+djangorestframework==3.15.2
+djangorestframework_simplejwt==5.4.0
+factory_boy==3.3.1
+Faker==33.0.0
+gunicorn==23.0.0
+mysqlclient==2.2.6
+packaging==24.2
+PyJWT==2.10.1
+python-dateutil==2.9.0.post0
+six==1.16.0
+sqlparse==0.5.2
+typing_extensions==4.12.2
